# nikke-cjjc-automator-modified

./: README.md  pyproject.toml  settings.default.toml
.github/workflows/: release.yml
src/nikke_cjjc_automator/: cli.py  core.py
src/nikke_cjjc_automator/controller/mode_strategy/: modestrategy_impl.py
src/nikke_cjjc_automator/view/: menu.py
