[project]
name = "nikke-cjjc-automator"
version = "1.1.9"
description = "NIKKE CJJC Automator CLI tool"
authors = [{name = "cwang", email = "cwang@cwang.cc"}]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "typer",
    "pygetwindow",
    "pyautogui",
    "Pillow",
    "keyboard",
    "psutil",
    "pywin32",
    "dynaconf",
    "questionary",
    "pyinstaller>=6.0.0", 
    "cython"
]

[project.scripts]
nikke-cjjc-automator = "nikke_cjjc_automator.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.dynaconf]
settings_files = ["settings.toml"]

[tool.pdm.scripts]
nikke-cjjc-automator-build = "python -m PyInstaller src/nikke_cjjc_automator/cli.py -F --name nikke-cjjc-automator --exclude-module pyinstaller --version-file version_info.txt --add-data settings.default.toml;. --add-data img/manual.jpg;."
nikke-cjjc-automator-build-pyd = "python -m PyInstaller src/nikke_cjjc_automator/cli.py -F --additional-hooks-dir=. -n nikke-cjjc-automator --exclude-module pyinstaller --version-file version_info.txt --collect-all=\"nikke_cjjc_automator\""
[tool.pdm.build]
package-dir = "src"
includes = ["src/nikke_cjjc_automator"]

[dependency-groups]
dev = [
    "setuptools>=82.0.1",
]